--- a/tmdb-movie-display/package.json
+++ b/tmdb-movie-display/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
